--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,15 @@
     "version": 2,
     "builds": [
       {
-        "src": "./Main.js",
+        "src": "Main.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/"
+        "dest": "/Main.js"
       }
     ]
-}
+  }
+  
