--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=bm7twxst59p5wzv1drdn-mysql.services.clever-cloud.com
-DB_USER=u0gmiwkfge50nx9s
-DB_PASSWORD=ychGun3yyXFIkc8vwERF
-DB_NAME=bm7twxst59p5wzv1drdn
+DB_HOST=103.157.26.66
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=jualind_db
